clicking two cats

--- a/clicking_cat.html
+++ b/clicking_cat.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div style="text-align: center;">
-		<h2>Clicing a Cat</h2>
+		<h2>Learn addEventListner by clicking  Cat</h2>
 		 <img id="clickcat" src="cat.jpg" width="500"> 
 		  <p style="text-align: center; font-weight: bold;" id="result">0</p>
 
