--- a/clicking_cat1.html
+++ b/clicking_cat1.html
@@ -4,7 +4,7 @@
 	<title>Clicing cat</title>
 </head>
 <body>
-	<h2>Learn addEventListner by clicking two Cats</h2>
+	<h2>Learn addEventListner by clicking two cats</h2>
 	 <div> Here you will see  How to call a fucntion with parameter within the addEventListner </div>
 	<div style="text-align: center; display: flex;">
 		 <div>
