multi cat clicking

--- a/closure_event_listner.html
+++ b/closure_event_listner.html
@@ -6,8 +6,11 @@
 <body>
 	<div>
 		 <h2>Page1: Closure and Event Listener</h2>
-		 <p>Compare the two pages and understand the difference. You should learn why alerting the correct message is not working in this page below. </p>
-		 	<ul>
+		 <ul>
+		 	  <li> Click on the numbers</li> 
+		 	  <li> Compare the two pages  </li> 
+		 	  <li> Understand the differences. </li>
+		 	<ul style="padding:10px;">
 		 		<li> <a href="closure_event_listner.html"> Page 1 </a></li>
 		 		<li> <a href="closure_event_listner1.html"> Page 2 </a></li>
 		 	</ul>
