--- a/clicking_cat.html
+++ b/clicking_cat.html
@@ -6,7 +6,7 @@
 <body>
 	<div style="text-align: center;">
 		<h2>Learn addEventListner by clicking  Cat</h2>
-		 <img id="clickcat" src="cat.jpg" width="500"> 
+		 <img id="clickcat" src="images/cat.jpg" width="500"> 
 		  <p style="text-align: center; font-weight: bold;" id="result">0</p>
 
 	</div>
