--- a/clicking_cat1.html
+++ b/clicking_cat1.html
@@ -8,11 +8,11 @@
 	 <div> Here you will see  How to call a fucntion with parameter within the addEventListner </div>
 	<div style="text-align: center; display: flex;">
 		 <div>
-		 	 <img id="clickcat1" src="cat.jpg" width="500" height="400"> 
+		 	 <img id="clickcat1" src="images/cat.jpg" width="500" height="400"> 
 		  <p style="text-align: center; font-weight: bold;" id="result1">0</p>
 		  </div>
 		  <div style="padding-left:16px;">
-		  <img id="clickcat2" src="cat1.jpg" width="500" height="400"> 
+		  <img id="clickcat2" src="images/cat1.jpg" width="500" height="400"> 
 		  <p style="text-align: center; font-weight: bold;" id="result2">0</p>
 		 	
 		  </div>
