--- a/clicking_cat2.html
+++ b/clicking_cat2.html
@@ -53,7 +53,7 @@
 				 //set everything content of the node to null 
 				 id.innerHTML ='';
 				 var elem = document.createElement('img');				
-				  elem.src =catId+".jpg"
+				  elem.src ="images/".catId+".jpg"
 				  elem.height ="400";
 				  elem.width ="450";
 				  elem.style.borderRadius ="0.35rem";
